
0.3.0 -- ???
------------

- Add copy of EventEmitter (from https://github.com/julien/dart_mv/blob/master/lib/eventemitter.dart)
  Not sure we're *really* gonna use that in the long run. StreamControllers may be enough. Bit verbose.
- Add support for uniform arrays.
- Fix a memory leak in the attributes' buffers.



0.2.0 -- 2014-07-29
-------------------

- Application
- Controller
- Dumb Shader Preprocessor
- Smooth Trackball Camera
- Quadcube mesh and UVs
- Quadsphere mesh and UVs
- Demo #02


0.1.0 -- 2014-07-14
-------------------

- World
- Camera
- Model
- Mesh
- Material
- WebGLRenderer
- Demo #01